<resources>
    <string name="app_name">Qingdan</string>
    <string name="noMoreData">没有更多数据了哦~</string>
    <string name="lookup_goods">查看商品</string>
    <string name="like_count">喜欢(%1$d)</string>
    <string name="having_count">拥有(%1$d)</string>
    <string name="comments_count">评论(%1$d)</string>
    <string name="ranking">口碑清单</string>
    <string name="text">%1$s分（%2$d人点评）</string>
    <string name="review">点评</string>
    <string name="comments">评论</string>
    <string name="share">分享</string>
    <string name="goods_des">商品描述</string>
    <string name="buy_link">购买渠道</string>
</resources>
