<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="50dp">

     <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@id/things_foot_comment"
            android:drawableTop="@drawable/review_button"
            android:drawablePadding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ff9099a7"
            android:textSize="10sp"
            android:text="@string/comments"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@id/things_foot_share"
            android:drawableTop="@drawable/share"
            android:drawablePadding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#ff9099a7"
            android:textSize="10sp"
            android:text="@string/share"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@id/things_foot_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/thing_details_write"
            android:background="@drawable/thing_review_bg"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="#fff"
            android:drawablePadding="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/review"/>

    </LinearLayout>


</LinearLayout>