<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#c1c1c1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#fff"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/thing_head_view_viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
        </android.support.v4.view.ViewPager>
        
        <LinearLayout
            android:id="@+id/dot"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <TextView
            android:id="@+id/thing_head_view_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="subtitle"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:id="@+id/thing_head_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:text="title"
            android:layout_marginLeft="20dp"/>

        <RatingBar
            android:id="@id/ratingbar"
            style="@style/fiveStarRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="visible"/>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/good_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#fff">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/angle_right_grey"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="12dp"
            android:text="@string/goods_des"
            android:textSize="14sp"
            android:textColor="#919191"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e1e1e1"/>

    <RelativeLayout
        android:id="@+id/but_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/angle_right_grey"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>

        <TextView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="12dp"
            android:text="@string/buy_link"
            android:textSize="14sp"
            android:textColor="#919191"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#515151"
            android:text="￥61起"
            android:layout_alignBaseline="@id/img"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/thing_details_heart_nor"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/text_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="#e1e1e1"
                android:text="@string/like_count"/>

        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e1e1e1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_having"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/thing_details_having_nor"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="#e1e1e1"
                android:text="@string/having_count"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>